# rustyhdf5

./: CHANGELOG.md  Cargo.toml  README.md  audit_cargo_tomls.sh  benchmarks-2026-02-26.txt
benchmarks/: 2026-02-21-m3max.txt  2026-02-26-m3max.txt  2026-03-01-oracle-xeon.md  bench_h5py.py  bench_h5py_mmap.py
crates/purehdf5/: Cargo.toml
crates/purehdf5-accel/: Cargo.toml
crates/purehdf5-accel/src/: avx2.rs  checksum.rs  convert.rs  lib.rs  scalar.rs
crates/purehdf5-ann/: Cargo.toml
crates/purehdf5-ann/src/: hnsw.rs  lib.rs
crates/purehdf5-derive/: Cargo.toml
crates/purehdf5-derive/src/: lib.rs
crates/purehdf5-filters/: Cargo.toml
crates/purehdf5-filters/benches/: compression_bench.rs  deflate_bench.rs
crates/purehdf5-filters/src/: lib.rs
crates/purehdf5-format/: Cargo.toml
crates/purehdf5-format/benches/: bench.rs
crates/purehdf5-format/fuzz/: Cargo.toml  README.md
crates/purehdf5-format/fuzz/fuzz_targets/: fuzz_btree_v2.rs  fuzz_dataspace.rs  fuzz_datatype.rs  fuzz_filter_pipeline.rs  fuzz_fractal_heap.rs  fuzz_full_file.rs  fuzz_object_header.rs  fuzz_superblock.rs
crates/purehdf5-format/src/: attribute.rs  attribute_info.rs  btree_v2.rs  checksum.rs  chunk_cache.rs  chunk_index.rs  chunked_read.rs  chunked_write.rs  data_layout.rs  data_read.rs  dataspace.rs  datatype.rs  ea_writer.rs  error.rs  extensible_array.rs  file_writer.rs  filter_pipeline.rs  filters.rs  fixed_array.rs  fractal_heap.rs  global_heap.rs  group_v2.rs  lane_partition.rs  lib.rs  link_info.rs  link_message.rs  message_type.rs  object_header.rs  object_header_writer.rs  parallel_read.rs  provenance.rs  shared_message.rs  superblock.rs  type_builders.rs  vl_data.rs
crates/purehdf5-format/tests/: derive_tests.rs  integration_test.rs  reference_tests.rs  robustness_tests.rs  writer_h5py_tests.rs
crates/purehdf5-gpu/: Cargo.toml
crates/purehdf5-gpu/benches/: bench.rs
crates/purehdf5-gpu/src/: accelerator.rs  device.rs  helpers.rs  lib.rs  shaders.rs
crates/purehdf5-gpu/tests/: gpu_tests.rs
crates/purehdf5-io/: Cargo.toml
crates/purehdf5-io/src/: async_read.rs  lib.rs  mmap.rs  prefetch.rs  sweep.rs
crates/purehdf5-netcdf4/: Cargo.toml
crates/purehdf5-netcdf4/src/: cf.rs  dimension.rs  error.rs  group.rs  lib.rs  types.rs  variable.rs
crates/purehdf5-netcdf4/tests/: interop_tests.rs  netcdf4_tests.rs
crates/purehdf5-py/: Cargo.toml  pyproject.toml
crates/purehdf5-py/src/: attrs.rs  dataset.rs  file.rs  group.rs  lib.rs
crates/purehdf5-py/tests/: test_purehdf5.py
crates/purehdf5-types/: Cargo.toml
crates/purehdf5/benches/: mmap_bench.rs  parallel_bench.rs
crates/purehdf5/src/: error.rs  lazy.rs  lib.rs  mmap_file.rs  reader.rs  types.rs  writer.rs
crates/purehdf5/tests/: h5py_interop_tests.rs  integration_tests.rs  mmap_default_tests.rs  mmap_lazy_tests.rs  parallel_integration.rs  zerocopy_tests.rs
crates/rustyhdf5/: Cargo.toml  README.md
crates/rustyhdf5-accel/: Cargo.toml  README.md
crates/rustyhdf5-accel/src/: avx2.rs  avx512.rs  lib.rs  neon.rs
crates/rustyhdf5-ann/: Cargo.toml  README.md
crates/rustyhdf5-ann/src/: hnsw.rs  lib.rs
crates/rustyhdf5-derive/: Cargo.toml  README.md
crates/rustyhdf5-derive/src/: lib.rs
crates/rustyhdf5-filters/: Cargo.toml  README.md
crates/rustyhdf5-filters/benches/: compression_bench.rs  deflate_bench.rs
crates/rustyhdf5-filters/src/: fast_deflate.rs  lib.rs
crates/rustyhdf5-format/: Cargo.toml  README.md
crates/rustyhdf5-format/benches/: bench.rs  parallel_decompress_bench.rs
crates/rustyhdf5-format/examples/: parallel_scaling.rs
crates/rustyhdf5-format/fuzz/: Cargo.toml  README.md
crates/rustyhdf5-format/fuzz/fuzz_targets/: fuzz_btree_v2.rs  fuzz_dataspace.rs  fuzz_datatype.rs  fuzz_filter_pipeline.rs  fuzz_fractal_heap.rs  fuzz_full_file.rs  fuzz_object_header.rs  fuzz_superblock.rs
crates/rustyhdf5-format/src/: attribute.rs  chunk_cache.rs  chunk_index.rs  chunked_read.rs  chunked_write.rs  data_layout.rs  data_read.rs  datatype.rs  dict_encoding.rs  error.rs  file_writer.rs  filters.rs  group_v1.rs  lib.rs  metadata_cache.rs  profiling.rs  property_list.rs  selection.rs  superblock.rs  type_builders.rs  vl_data.rs
crates/rustyhdf5-format/tests/: derive_tests.rs  integration_test.rs  reference_tests.rs  robustness_tests.rs  writer_h5py_tests.rs
crates/rustyhdf5-gpu/: Cargo.toml  README.md
crates/rustyhdf5-gpu/benches/: bench.rs
crates/rustyhdf5-gpu/src/: accelerator.rs  error.rs  lib.rs
crates/rustyhdf5-gpu/tests/: gpu_tests.rs
crates/rustyhdf5-io/: Cargo.toml  README.md
crates/rustyhdf5-io/src/: async_read.rs  hsds.rs  lib.rs  mmap.rs  subfiling.rs  sweep.rs  vol.rs
crates/rustyhdf5-netcdf4/: Cargo.toml  README.md
crates/rustyhdf5-netcdf4/src/: cf.rs  dimension.rs  error.rs  group.rs  lib.rs  types.rs  variable.rs
crates/rustyhdf5-netcdf4/tests/: interop_tests.rs  netcdf4_tests.rs
crates/rustyhdf5-py/: Cargo.toml  README.md  pyproject.toml
crates/rustyhdf5-py/src/: attrs.rs  dataset.rs  file.rs  group.rs  lib.rs
crates/rustyhdf5-py/tests/: test_rustyhdf5.py
crates/rustyhdf5-types/: Cargo.toml  README.md
crates/rustyhdf5-types/src/: lib.rs
crates/rustyhdf5/benches/: mmap_bench.rs  parallel_bench.rs
crates/rustyhdf5/src/: error.rs  lazy.rs  lib.rs  mmap_file.rs  reader.rs  types.rs  writer.rs
crates/rustyhdf5/tests/: h5py_interop_tests.rs  integration_tests.rs  mmap_default_tests.rs  mmap_lazy_tests.rs  parallel_integration.rs  zerocopy_tests.rs
scripts/: check-nostd.sh  ci-test.sh  cross-compile-check.sh  run-benchmarks.sh
