[workspace]
members = [
    "crates/purehdf5-format",
    "crates/purehdf5-types",
    "crates/purehdf5-io",
    "crates/purehdf5-filters",
    "crates/purehdf5-derive",
    "crates/purehdf5",
    "crates/purehdf5-netcdf4",
    "crates/purehdf5-ann",
    "crates/purehdf5-py",
    "crates/purehdf5-accel",
]
resolver = "2"
