[package]
name = "purehdf5-ann"
version = "0.1.0"
edition = "2021"
description = "HNSW approximate nearest neighbor index stored as HDF5"
license = "MIT"
repository = "https://github.com/nicosalm/purehdf5-rs"
keywords = ["hdf5", "ann", "hnsw", "nearest-neighbor"]
categories = ["algorithms", "science"]

[dependencies]
purehdf5-format = { path = "../purehdf5-format" }
purehdf5-io = { path = "../purehdf5-io" }
