[package]
name = "purehdf5-filters"
version = "0.1.0"
edition = "2021"
description = "Filter and compression pipeline for purehdf5"
license = "MIT"
repository = "https://github.com/nicosalm/purehdf5-rs"
keywords = ["hdf5", "compression", "deflate", "filters"]
categories = ["compression", "science"]

[dependencies]
flate2 = { version = "1", default-features = false, features = ["miniz_oxide"] }
miniz_oxide = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "deflate_bench"
harness = false

[features]
default = ["fast-deflate", "apple-compression"]
fast-deflate = ["flate2/zlib-ng"]
apple-compression = []
