[package]
name = "purehdf5-format"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { version = "1", default-features = false }
flate2 = { version = "1", default-features = false, features = ["miniz_oxide"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["std", "checksum", "deflate"]
std = []
checksum = []
deflate = ["flate2"]
