[package]
name = "purehdf5-format"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust HDF5 binary format parsing and writing — no C dependencies"
license = "MIT"
repository = "https://github.com/nicosalm/purehdf5-rs"
keywords = ["hdf5", "science", "data", "binary", "no-std"]
categories = ["parser-implementations", "science", "encoding", "no-std"]
readme = "../../README.md"

[dependencies]
byteorder = { version = "1", default-features = false }
flate2 = { version = "1", default-features = false, features = ["miniz_oxide"], optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[features]
default = ["std", "checksum", "deflate"]
std = []
checksum = []
deflate = ["flate2"]
