[package]
name = "purehdf5-io"
version = "0.1.0"
edition = "2021"
description = "I/O abstraction layer for purehdf5"
license = "MIT"
repository = "https://github.com/nicosalm/purehdf5-rs"
keywords = ["hdf5", "io", "science", "data"]
categories = ["filesystem", "science"]

[dependencies]
purehdf5-format = { path = "../purehdf5-format" }
memmap2 = { version = "0.9", optional = true }
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
mmap = ["memmap2"]
async = ["tokio"]
hsds = ["reqwest", "serde", "serde_json", "async"]
