[package]
name = "purehdf5"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust HDF5 reader/writer — no C dependencies"
license = "MIT"
repository = "https://github.com/nicosalm/purehdf5-rs"
keywords = ["hdf5", "science", "data", "binary"]
categories = ["parser-implementations", "science", "encoding"]
readme = "../../README.md"

[dependencies]
purehdf5-format = { path = "../purehdf5-format" }
purehdf5-io = { path = "../purehdf5-io" }
rayon = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
purehdf5-io = { path = "../purehdf5-io", features = ["mmap"] }
purehdf5-format = { path = "../purehdf5-format", features = ["parallel", "fast-checksum"] }
purehdf5-filters = { path = "../purehdf5-filters" }

[[bench]]
name = "mmap_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false

[features]
default = ["mmap"]
mmap = ["purehdf5-io/mmap"]
parallel = ["purehdf5-format/parallel", "rayon"]
fast-deflate = ["purehdf5-format/fast-deflate"]
