[package]
name = "rustyhdf5-ann"
version = "1.93.0"
edition = "2024"
description = "HNSW approximate nearest neighbor index stored as HDF5"
license = "MIT"
repository = "https://github.com/rustystack/rustyhdf5"
readme = "README.md"
keywords = ["hdf5", "ann", "hnsw", "nearest-neighbor"]
categories = ["algorithms", "science"]

[dependencies]
rustyhdf5-format = { path = "../rustyhdf5-format", version = "1.93.0" }
rustyhdf5-io = { path = "../rustyhdf5-io", version = "1.93.0" }
