[package]
name = "rustyhdf5-gpu"
version = "1.93.0"
edition = "2024"
description = "GPU-accelerated vector operations for rustyhdf5 using wgpu compute shaders"
license = "MIT"
repository = "https://github.com/rustystack/rustyhdf5"
readme = "README.md"
keywords = ["hdf5", "gpu", "wgpu", "compute"]
categories = ["science", "graphics"]

[dependencies]
wgpu = { version = "28", optional = true }
half = { version = "2.7", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
approx = "0.5"
pollster = "0.4"
env_logger = "0.11"

[[bench]]
name = "bench"
harness = false

[features]
default = ["gpu-wgpu"]
gpu-wgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:half"]

[package.metadata.docs.rs]
features = []
targets = ["x86_64-unknown-linux-gnu"]
