[package]
name = "rustyhdf5-io"
version = "1.93.0"
edition = "2024"
description = "I/O abstraction layer for rustyhdf5"
license = "MIT"
repository = "https://github.com/rustystack/rustyhdf5"
readme = "README.md"
keywords = ["hdf5", "io", "science", "data"]
categories = ["filesystem", "science"]

[dependencies]
rustyhdf5-format = { path = "../rustyhdf5-format", version = "1.93.0" }
memmap2 = { version = "0.9", optional = true }
libc = { version = "0.2", optional = true }
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
mmap = ["memmap2", "libc"]
async = ["tokio"]
hsds = ["reqwest", "serde", "serde_json", "async"]
