[package]
name = "rustyhdf5-format-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rustyhdf5-format]
path = ".."
features = ["std", "checksum", "deflate"]

[workspace]
members = ["."]

[[bin]]
name = "fuzz_superblock"
path = "fuzz_targets/fuzz_superblock.rs"
doc = false

[[bin]]
name = "fuzz_object_header"
path = "fuzz_targets/fuzz_object_header.rs"
doc = false

[[bin]]
name = "fuzz_datatype"
path = "fuzz_targets/fuzz_datatype.rs"
doc = false

[[bin]]
name = "fuzz_dataspace"
path = "fuzz_targets/fuzz_dataspace.rs"
doc = false

[[bin]]
name = "fuzz_fractal_heap"
path = "fuzz_targets/fuzz_fractal_heap.rs"
doc = false

[[bin]]
name = "fuzz_btree_v2"
path = "fuzz_targets/fuzz_btree_v2.rs"
doc = false

[[bin]]
name = "fuzz_filter_pipeline"
path = "fuzz_targets/fuzz_filter_pipeline.rs"
doc = false

[[bin]]
name = "fuzz_full_file"
path = "fuzz_targets/fuzz_full_file.rs"
doc = false
